@@ -1,7 +1,7 @@
-# $Id: Makefile.PL 17394 2006-04-05 13:49:26Z wsnyder $
+# $Id: Makefile.PL 30544 2007-01-23 13:55:35Z wsnyder $
 # DESCRIPTION: Perl ExtUtils: Type 'perl Makefile.PL' to create a Makefile for this package
 #
-# Copyright 2003-2006 by Wilson Snyder.  This program is free software;
+# Copyright 2003-2007 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
 # Lesser General Public License or the Perl Artistic License.
 ######################################################################
